# monopoly

./: Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml
design_docs/: database.mmd
scripts/: lint_format.sh
src/monopoly/: __about__.py  __main__.py
src/monopoly/cli/: __init__.py  main.py
src/monopoly/db/: __init__.py  connection.py  repository.py  schema.sql
src/monopoly/domain/: __init__.py  game_engine.py
src/monopoly/models/: __init__.py  game.py  player.py  property_state.py  space.py
tests/: __init__.py
